namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nodejs-postgresql-persistent
spec: {}
