nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-postgresql-persistent
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodejs-postgresql-persistent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-postgresql-persistent
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: postgresql
        - name: POSTGRESQL_SERVICE_HOST
          value: mydb-ec2.sandbox2898.opentlc.com
        - name: POSTGRESQL_SERVICE_PORT
          value: '"5432"'
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: nodejs-postgresql-persistent
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: nodejs-postgresql-persistent
        - name: POSTGRESQL_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-admin-password
              name: nodejs-postgresql-persistent
        - name: POSTGRESQL_DATABASE
          value: mydb
        image: quay.io/robertsandoval/nodejs-postgresql-persistent:latest
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
