nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
    service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
  labels:
    app: nodejs-postgresql-persistent
    template: nodejs-postgresql-persistent
  name: nodejs-postgresql-persistent
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    app: nodejs-postgresql-persistent
