postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: ExternalName
  externalName: mydb-ec2.sandbox2577.opentlc.com
