nodejs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-postgresql-persistent
    template: nodejs-postgresql-persistent
  name: nodejs-postgresql-persistent
spec:
  to:
    kind: Service
    name: nodejs-postgresql-persistent
